--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,8 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 julia = "1.10"
 
 [extras]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "LinearAlgebra"]
