--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,15 @@
 name = "IMUDevNNTrainingLib"
 uuid = "f8493c61-e13b-4f15-934e-c0b2dbef8231"
 authors = ["Marcin Mider <marcin.mider@gmail.com> and contributors"]
-version = "0.3.2"
+version = "0.4.0"
 
 [deps]
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Humanize = "7ec9b9c5-1998-51e1-b7fc-fc3590c18259"
 IMUDevNNLib = "295d651b-8f3c-4826-af69-6cde381c7ec2"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 
 [compat]
 julia = "1.10"
