--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 
 [compat]
+Term = "2"
 julia = "1.10"
 
 [extras]
