--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,16 @@
 name = "IMUDevNNTrainingLib"
 uuid = "f8493c61-e13b-4f15-934e-c0b2dbef8231"
 authors = ["Marcin Mider <marcin.mider@gmail.com> and contributors"]
-version = "0.5.0"
+version = "0.6.0"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Humanize = "7ec9b9c5-1998-51e1-b7fc-fc3590c18259"
 IMUDevNNLib = "295d651b-8f3c-4826-af69-6cde381c7ec2"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+ParameterSchedulers = "d7d3b36b-41b8-4d0d-a2bf-768c6151755e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 
