--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,13 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 
 [compat]
+Flux = "0.14"
+Humanize = "1"
+IMUDevNNLib = "0.4"
+JLD2 = "0.4"
+ParameterSchedulers = "0.4"
+Reexport = "1"
+Term = "2"
 julia = "1.10"
 
 [extras]
