--- a/Project.toml
+++ b/Project.toml
@@ -1,32 +1,36 @@
 name = "IMUDevNNTrainingLib"
 uuid = "f8493c61-e13b-4f15-934e-c0b2dbef8231"
 authors = ["Marcin Mider <marcin.mider@gmail.com> and contributors"]
-version = "0.6.0"
+version = "0.6.1"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
-Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Humanize = "7ec9b9c5-1998-51e1-b7fc-fc3590c18259"
 IMUDevNNLib = "295d651b-8f3c-4826-af69-6cde381c7ec2"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 ParameterSchedulers = "d7d3b36b-41b8-4d0d-a2bf-768c6151755e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 
 [compat]
-Flux = "0.14"
+DocStringExtensions = "0.9"
 Humanize = "1"
 IMUDevNNLib = "0.4"
 JLD2 = "0.4"
+Lux = "0.5"
+MLUtils = "0.4"
+Optimisers = "0.3"
 ParameterSchedulers = "0.4"
 Reexport = "1"
 Term = "2"
 julia = "1.10"
 
 [extras]
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "LinearAlgebra"]
+test = ["Test"]
