--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -1,4 +1,6 @@
 [deps]
-Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 IMUDevNNTrainingLib = "f8493c61-e13b-4f15-934e-c0b2dbef8231"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 ParameterSchedulers = "d7d3b36b-41b8-4d0d-a2bf-768c6151755e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
