CompatHelper: add new compat entry for Lux at version 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ DocStringExtensions = "0.9"
 Humanize = "1"
 IMUDevNNLib = "0.5"
 JLD2 = "0.4"
+Lux = "0.5"
 MLUtils = "0.4"
 Optimisers = "0.3"
 ParameterSchedulers = "0.4"
