--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 
 [compat]
+Accessors = "0.1"
 DocStringExtensions = "0.9"
 Humanize = "1"
 IMUDevNNLib = "0.5"
